--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <p>© 2023 Awesome Books, Muhammad Zunair. All rights reserved.</p>
     </footer>
 
-   <script src="script.js"></script>
-   <script src="navigation.js"></script>
+   <script type="module" src="script.js"></script>
+   <script type="module" src="navigation.js"></script>
   </body>
 </html>
